add html to stylesheet

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,5 +2,13 @@ body {
   font-family: 'Playfair Display', serif;
 }
 
+header, footer{
+  
+}
+
+section{
+  
+}
+
 /* font-family: 'Oswald', sans-serif;
 font-family: 'Playfair Display', serif; */
