--- a/styles/main.css
+++ b/styles/main.css
@@ -1,14 +1,174 @@
+/* font-family: 'Abel', sans-serif;
+font-family: 'Oswald', sans-serif;
+font-family: 'Playfair Display', serif; */
+
+*{
+  margin: 0;
+}
+
 body {
   font-family: 'Playfair Display', serif;
+  font-size: 22px;
+  line-height: 32px;
+  color: black;
 }
 
-header, footer{
-  
+html {
+  scroll-behavior: smooth;
 }
 
-section{
-  
+h1 {
+  font-size: 120px;
+  margin-bottom: 15px;
+  line-height: 130px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
 }
 
-/* font-family: 'Oswald', sans-serif;
-font-family: 'Playfair Display', serif; */
+h2 {
+  font-size: 85px;
+  margin-bottom: 15px;
+  line-height: 95px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 55px;
+  margin-bottom: 15px;
+  line-height: 65px;
+  font-weight: 500;
+}
+
+h4 {
+  font-size: 25px;
+  margin-bottom: 15px;
+  line-height: 35px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+p {
+  margin: 15px 0;
+}
+
+.hero-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+}
+
+button{
+  font-family: sans-serif;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 32px;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: 3px solid black;
+  padding: 15px 25px;
+}
+
+button:hover{
+  box-shadow: 6px 6px black;
+  transform: translate(-6px ,-6px);
+  cursor: pointer;
+}
+
+.container{
+  padding: 80px;
+  max-width:1100px;
+  margin: 0 auto;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+  max-width:1100px;
+  margin: 0 auto;
+}
+
+.nav-btn {
+  margin: 0 25px;
+}
+
+ol {
+  list-style: none; 
+  counter-reset: li;
+  margin: 15px 0;
+  padding: 0;
+}
+
+li {
+  counter-increment: li;
+  margin: 5px 0;
+}
+
+ ol li::before {
+  content: counter(li)"."; 
+  font-size: 30px;
+  color: black;
+  display: inline-block;
+  margin-right: 5px; 
+  }
+
+img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 60%;
+  column-gap: 40px;
+}
+
+.grid-reverse{
+  display: grid;
+  grid-template-columns: 60% 1fr;
+  column-gap: 40px;
+}
+
+.yellow {
+  background-color: #F3D83E;
+}
+
+.yellow-box {
+  background-color: yellow;
+  width: 100%;
+  height: 250px;
+}
+
+.green-box  {
+  background-color: green;
+  width: 100%;
+  height: 250px;
+}
+
+
+  @media screen and (max-width: 900px){
+    
+  }
+
+  @media (max-width: 450px){
+
+
+    .grid-reverse, .grid{
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+
+    /* maybe flex column and reverse for the images */
+
+  }
