--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@ body {
 
 html {
   scroll-behavior: smooth;
+  width: 100%;
 }
 
 h1 {
@@ -41,6 +42,9 @@ h3 {
 }
 
 h4 {
+  font-family: sans-serif;
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 300;
   font-size: 25px;
   margin-bottom: 15px;
   line-height: 35px;
@@ -49,8 +53,29 @@ h4 {
   letter-spacing: 2px;
 }
 
+h5 {
+  font-style: italic;
+  font-size: 18px;
+  line-height: 18px;
+}
+
+h6 {
+  font-size: 35px;
+  line-height: 45px;
+  color: black;
+}
+
 p {
   margin: 15px 0;
+}
+
+.subtitle {
+  font-size: 18px;
+  line-height: 10px;
+}
+
+.blog-text-p1 {
+  margin-top: 80px;
 }
 
 .hero-text-wrapper {
@@ -90,17 +115,24 @@ button:hover{
   margin: 0 auto;
 }
 
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 80px;
+.img-container{
+  padding: 0px;
   max-width:1100px;
   margin: 0 auto;
 }
 
-.nav-btn {
-  margin: 0 25px;
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width:1100px;
+  margin: 0 auto;
+  padding: 20px 80px;
+}
+
+nav button {
+  margin: 10px 15px;
 }
 
 ol {
@@ -117,11 +149,16 @@ li {
 
  ol li::before {
   content: counter(li)"."; 
-  font-size: 30px;
-  color: black;
+  font-size: 50px;
+  color: #e9a473;
   display: inline-block;
-  margin-right: 5px; 
+  margin-right: 15px; 
   }
+
+.gold {
+  color: #e9a473;
+  font-size: 32px;
+}
 
 img {
   width: 100%;
@@ -134,10 +171,31 @@ img {
   column-gap: 40px;
 }
 
-.grid-reverse{
+.grid-reverse {
   display: grid;
   grid-template-columns: 60% 1fr;
   column-gap: 40px;
+}
+
+.blog-grid{
+  display: grid;
+  grid-template-columns: 1fr 55%;
+  column-gap: 60px;
+}
+
+.blog-author {
+  display: flex;
+  justify-content: space-between;
+}
+
+.blogcard-text-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.border {
+  border-bottom: 1px solid black;
 }
 
 .yellow {
@@ -145,20 +203,74 @@ img {
 }
 
 .yellow-box {
-  background-color: yellow;
-  width: 100%;
-  height: 250px;
+  background-color: #F3D83E;
+  width: 50%;
+  height: 50px;
+}
+
+.yellow-box-relative {
+  background-color: #F3D83E;
+  width: 50%;
+  height: 50px;
+  position: relative;
+}
+
+.yellow-box-fixed {
+  background-color: #F3D83E;
+  width: 50px;
+  height: 15px;
+  position: fixed;
+  left: 0;
+  bottom: 5px;
 }
 
 .green-box  {
-  background-color: green;
-  width: 100%;
-  height: 250px;
+  background-color: #719675;
+  width: 50%;
+  height: 50px;
+  margin-bottom: 40px;
+}
+
+.green-box-relative  {
+  background-color: #719675;
+  position: relative;
+  top: -100px;
+  left: 50px;
+  width: 50%;
+  height: 50px;
+  margin-bottom: 40px;
+}
+
+.green-box-absolute  {
+  background-color: #719675;
+  position: absolute;
+  top: 10px;
+  left: 50px;
+  width: 50%;
+  height: 50px;
+  margin-bottom: 40px;
 }
 
 
-  @media screen and (max-width: 900px){
-    
+
+.black {
+  background-color: rgb(35, 35, 35);
+  color: white;
+}
+
+.center {
+  text-align: center;
+}
+
+
+  @media (max-width: 1100px){
+    section{
+      width: 100%;
+    }
+
+    .container {
+      width: 100%;
+    }
   }
 
   @media (max-width: 450px){
