add new blog post

--- a/styles/main.css
+++ b/styles/main.css
@@ -92,6 +92,10 @@ a:visited {
   color: black;
 }
 
+.para-link {
+  text-decoration: underline;
+}
+
 button{
   font-family: sans-serif;
   font-size: 22px;
