--- a/styles/main.css
+++ b/styles/main.css
@@ -332,6 +332,12 @@ img {
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.562);
 }
 
+.quote {
+  font-size: 28px;
+  line-height: 35px;
+  font-weight: bold;
+}
+
 
 
   @media (max-width: 1300px) {
@@ -472,6 +478,11 @@ img {
       font-size: 25px;
       line-height: 35px;
       color: black;
+    }
+
+    .quote {
+      font-size: 20px;
+      line-height: 30px;
     }
     
     p {
