--- a/styles/main.css
+++ b/styles/main.css
@@ -170,6 +170,7 @@ li {
 
 img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -203,9 +204,6 @@ img {
 }
 
 .blog-tile-wrapper {
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px 0px; */
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
